--- a/app/game/widgets/popups/player-box.scss
+++ b/app/game/widgets/popups/player-box.scss
@@ -25,7 +25,27 @@ aot-popup .popup-player-box {
     padding-bottom: 40px;
 
     @include small-height {
-        padding-bottom: 10px;
+        font-size: 12px;
+        padding-top: 40px;
+    }
+
+    @include media-sm {
+        font-size: 13px;
+        padding-top: 50px;
+    }
+
+    @include media-md {
+        font-size: 15px;
+        padding-top: 60px;
+    }
+
+    @include media-lg {
+        font-size: 16px;
+        padding-top: 70px;
+    }
+
+    @include fluid {
+        font-size: 12px;
     }
 
     @include tiny-height {
