--- a/app/site/layout.scss
+++ b/app/site/layout.scss
@@ -10,7 +10,7 @@
 .row-block {
     margin-left: auto;
     margin-right: auto;
-    max-width: 1300px;
+    max-width: 1600px;
 }
 
 .column-left {
