--- a/app/widgets/select-cards/select-cards.scss
+++ b/app/widgets/select-cards/select-cards.scss
@@ -31,7 +31,7 @@ $medium-height: 800px;
     }
 }
 
-$card-img-height: 50vh;
+$card-img-height: 45vh;
 $change-card-opacity: 0.4;
 $fade-time: 0.2s;
 
